--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
